test/fixtures/errors/events_unhandled_error_common_trace.snapshot
node:internal*events*shared_internal_event_emitter:*
    throw er; * Unhandled 'error' event
    ^

Error: foo:bar
    at bar (*events_unhandled_error_common_trace.js:*:*)
    at foo (*events_unhandled_error_common_trace.js:*:*)
Emitted 'error' event at:
    at quux (*events_unhandled_error_common_trace.js:*:*)
    at Object.<anonymous> (*events_unhandled_error_common_trace.js:*:*)

Node.js *
